✨ Job openings for 29/04/2025

--- a/notebooks/custom_scraper_poc.ipynb
+++ b/notebooks/custom_scraper_poc.ipynb
@@ -1,14 +1,19 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Connected to venv_jobbot (Python 3.12.3)"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "id": "9009719d-646a-4a40-83e3-dcd4ce5ee5d0",
    "metadata": {},
    "outputs": [],
    "source": [
-    "#%%\n",
-    "\n",
     "import requests\n",
     "from bs4 import BeautifulSoup\n",
     "import json\n",
@@ -6024,8 +6029,6 @@
     }
    ],
    "source": [
-    "#%% \n",
-    "\n",
     "link_keyword_and_location = 'https://www.linkedin.com/jobs/search?keywords=Machine%20Learning&location=Colombia&geoId=100876405&position=1&pageNum=0'\n",
     "link_ultimas24h = 'https://www.linkedin.com/jobs/search?keywords=Machine%20Learning&location=Colombia&geoId=100876405&f_TPR=r86400&f_JT=F&position=1&pageNum=0'\n",
     "link_jornada_completa = 'https://www.linkedin.com/jobs/search?keywords=Machine%20Learning&location=Colombia&geoId=100876405&f_TPR=r86400&position=1&pageNum=0'\n",
@@ -6054,8 +6057,6 @@
     }
    ],
    "source": [
-    "# %%\n",
-    "\n",
     "# Extract the total number of job postings indicated in the page\n",
     "total_job_postings = soup.select_one('h1>span').text\n",
     "total_job_postings = total_job_postings.replace(',', '')\n",
@@ -6081,8 +6082,6 @@
     }
    ],
    "source": [
-    "#%%\n",
-    "\n",
     "# Extract the job postings\n",
     "job_postings = soup.select('a.base-card__full-link')\n",
     "job_links = [job['href'] for job in job_postings if 'href' in job.attrs]\n",
@@ -6107,8 +6106,6 @@
     }
    ],
    "source": [
-    "#%%\n",
-    "\n",
     "job_link = job_links[0].split('?')[0]\n",
     "job_link"
    ]
@@ -11684,8 +11681,6 @@
     }
    ],
    "source": [
-    "# %%\n",
-    "\n",
     "res_job = requests.get(job_link)\n",
     "soup_job = BeautifulSoup(res_job.text, 'html.parser')\n",
     "soup_job"
@@ -11709,8 +11704,6 @@
     }
    ],
    "source": [
-    "# %%\n",
-    "\n",
     "soup_job.text.strip()"
    ]
   },
@@ -11732,8 +11725,6 @@
     }
    ],
    "source": [
-    "# %%\n",
-    "\n",
     "# Extract the job description\n",
     "job_description = soup_job.select_one('div.show-more-less-html__markup').text\n",
     "job_description.strip()"
@@ -11757,8 +11748,6 @@
     }
    ],
    "source": [
-    "# %%\n",
-    "\n",
     "# Extract the job title\n",
     "job_title = soup_job.select_one('h1').text\n",
     "job_title.strip()"
@@ -11782,8 +11771,6 @@
     }
    ],
    "source": [
-    "# %%\n",
-    "\n",
     "# Extract the company name\n",
     "company_name = soup_job.select_one('a.topcard__org-name-link').text\n",
     "company_name.strip()"
@@ -11807,8 +11794,6 @@
     }
    ],
    "source": [
-    "# %%\n",
-    "\n",
     "# Extract the location\n",
     "location = soup_job.select_one('span.topcard__flavor').text\n",
     "location.strip()"
@@ -11832,8 +11817,6 @@
     }
    ],
    "source": [
-    "# %%\n",
-    "\n",
     "# Extract the job posting date\n",
     "job_posting_date = soup_job.select_one('time').text\n",
     "time_expresion = job_posting_date.strip().split(' ')\n",
@@ -11860,8 +11843,6 @@
     }
    ],
    "source": [
-    "# %%\n",
-    "\n",
     "# Extract the seniority level\n",
     "seniority_level = soup_job.select_one('span.description__job-criteria-text').text\n",
     "seniority_level.strip()"
@@ -11885,8 +11866,6 @@
     }
    ],
    "source": [
-    "# %%\n",
-    "\n",
     "# Extract the job function\n",
     "job_function = soup_job.select_one('span.description__job-criteria-text').text\n",
     "job_function.strip()"
@@ -11910,8 +11889,6 @@
     }
    ],
    "source": [
-    "# %%\n",
-    "\n",
     "# Extract the industries\n",
     "industries = soup_job.select_one('span.description__job-criteria-text').text\n",
     "industries.strip()"
